# npf-renderer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-publish.yml  test.yml
npf_renderer/: main.py
npf_renderer/format/: text.py
npf_renderer/parse/: base.py  text_block.py
npf_renderer/parse/objects/: text.py
src/npf_renderer/: __init__.py  exceptions.py  format_npf.py  helpers.py  parse.py  types_annotations.py  utils.py
src/npf_renderer/format/: __init__.py  attribution.py  base.py  i18n.py  image.py  image_formatter.py  inline.py  misc.py  text.py  text_formatter.py
src/npf_renderer/objects/: __init__.py  attribution.py  audio_block.py  embed_iframe.py  image.py  inline.py  layouts.py  link_block.py  media_objects.py  poll_block.py  text_block.py  unsupported.py  video_block.py
src/npf_renderer/parse/: __init__.py  base.py  layout_parse.py  misc.py  parse.py  text_block.py
src/npf_renderer/parse/objects/: text.py
tests/attribution/: attribution_test_data.py  test_attribution_format.py  test_attribution_parse.py
tests/audio_block/: mock_audio_blocks.py  test_audio_block_format.py  test_audio_block_parse.py
tests/i18n/: i18n_test_data.py  test_i18n.py
tests/image and gifs/: test_image_parse.py
tests/image_block/: image_block_test_data.py  test_image_block_format.py  test_image_block_parse.py
tests/inline/: format_only_inline_test_data.py  inline_formatting_data.py  test_inline_format.py  test_inline_parse.py
tests/layouts/: example_layout_data.py  test_layout_formatting.py  test_layout_parse.py
tests/link_block/: example_link_block_data.py  test_link_block_format.py  test_link_block_parse.py
tests/misc/: test_unsupported_block.py
tests/poll_block/: mock_poll_blocks.py  test_format_poll_block.py  test_parse_poll_block.py
tests/text/: example_data.py  exclusive_formatting_test_data.py  test_format.py  test_parse.py
tests/text_block/: additional_text_block_formatting_data.py  example_text_block_data.py  test_text_block_format.py  test_text_block_parse.py
tests/video_block/: mocks.py  test_video_block_format.py  test_video_block_parse.py
