[project]
name = "npf_renderer"
version = "0.7.0"
requires-python = ">=3.10"
dependencies = [
    "dominate",
]

[project.optional-dependencies]
# A prettyprinter libary for debugging purposes
dev = ["pytest==7.4.2", "prettyprinter==0.18.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"
