[project]
name = "npf_renderer"
description="A Python Based Renderer for Tumblr's Neue Post Format (NPF) "
version = "0.12.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = ["dominate==2.8.0", "intervaltree==3.1.0"]

[project.optional-dependencies]
dev = ["pytest==7.4.2", "prettyprinter==0.18.0", "freezegun==1.4.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"

[project.urls]
Homepage = "https://github.com/syeopite/npf-renderer"
Source = "https://github.com/syeopite/npf-renderer"
