[project]
name = "npf_renderer"
description="A Python Based Renderer for Tumblr's Neue Post Format (NPF) "
version = "0.13.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = ["dominate>=2.8.0", "intervaltree>=3.1.0"]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "prettyprinter==0.18.0", "freezegun==1.5.1", "black==25.1.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"

[project.urls]
Homepage = "https://github.com/syeopite/npf-renderer"
Source = "https://github.com/syeopite/npf-renderer"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
